# gemstack

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SETUP.md  fix_wait.py  pyproject.toml  release-please-config.json  roles_phases.md
.agent/: ARCHITECTURE.md  PHILOSOPHY.md  STATUS.md  STYLE.md  TESTING.md
.agent/workflows/: architect.md  build.md  design.md  devops-engineer.md  fix.md  ideate.md  ml-engineer.md  plan.md  principal-backend-engineer.md  principal-frontend-engineer.md  product-visionary.md  qa-engineer.md  review.md  security-engineer.md  ship.md  test.md  ui-ux-designer.md
.github/workflows/: ci.yml  publish.yml  release.yml  update-formula.yml
Formula/: gemstack.rb
context/: .env.example  context_prompt.md
context/.agent/: ARCHITECTURE.md  PHILOSOPHY.md  STATUS.md  STYLE.md  TESTING.md
docs/: README.md  autonomous-execution.md  cli-reference.md  configuration-and-integrations.md  context-compiler.md  drift-detection.md  getting-started.md  mcp-server.md  plugins.md  the-5-step-lifecycle.md  the-agent-context.md  topologies.md
docs/archive/v1.1.0-migration-dx-improvements/: AUDIT_FINDINGS.md  v1.1.0-migration-dx-improvements.md
docs/assets/screenshots/: .gitkeep
docs/assets/videos/: .gitkeep
docs/explorations/: 2026-04-23-engineer-migration-dx-improvements.md
examples/: backend-ml-ai.md  frontend.md  full-stack-ai.md  full-stack.md  infrastructure.md  library-sdk.md
phases/: audit.md  build.md  contract-and-plan.md  design.md  fix.md  ideate.md  integrate.md  plan.md  review.md  ship.md  test.md
roles/: architect.md  devops-engineer.md  ml-engineer.md  principal-backend-engineer.md  principal-frontend-engineer.md  product-visionary.md  qa-engineer.md  sdet.md  security-engineer.md  ui-ux-designer.md
src/gemstack/: __init__.py  errors.py
src/gemstack/adapters/: __init__.py  antigravity.py  base.py  claude.py  cursor.py  gemini.py  gemini_cli.py
src/gemstack/ai/: __init__.py  bootstrap.py
src/gemstack/cli/: batch_cmd.py  check_cmd.py  ci_cmd.py  compare_cmd.py  compile_cmd.py  config_cmd.py  context.py  diagnose_cmd.py  diff_cmd.py  doctor_cmd.py  eval_cmd.py  export_cmd.py  hook_cmd.py  init_cmd.py  install_cmd.py  json_log_formatter.py  main.py  matrix_cmd.py  mcp_cmd.py  migrate_cmd.py  phase_cmd.py  prompt_cmd.py  registry_cmd.py  replay_cmd.py  route_cmd.py  run_cmd.py  scaffold_cmd.py  snapshot_cmd.py  start_cmd.py  status_cmd.py  tail_cmd.py  teach_cmd.py  worktree_cmd.py
src/gemstack/core/: compiler.py  config.py  cost_tracker.py  detector.py  differ.py  executor.py  fileutil.py  installer.py  migrator.py  process_registry.py  router.py  templates.py  validator.py  worktree.py
src/gemstack/data/: __init__.py
src/gemstack/data/context/: __init__.py  context_prompt.md
src/gemstack/data/examples/: __init__.py
src/gemstack/data/phases/: __init__.py
src/gemstack/data/roles/: __init__.py
src/gemstack/data/topologies/: __init__.py
src/gemstack/data/workflows/: __init__.py
src/gemstack/mcp/: __init__.py  registrar.py  server.py
src/gemstack/orchestration/: compiler.py  cost_tracker.py  executor.py  router.py
src/gemstack/platform/: installer.py  process_registry.py  worktree.py
src/gemstack/plugins/: __init__.py  hooks.py
src/gemstack/project/: config.py  detector.py  migrator.py  scaffolder.py  templates.py  validator.py
src/gemstack/templates/: __init__.py  architecture.md.j2  philosophy.md.j2  status.md.j2  style.md.j2  testing.md.j2
src/gemstack/tui/: __init__.py  tail_app.py
src/gemstack/utils/: differ.py  fileutil.py
tests/: conftest.py  test_bootstrap.py  test_ci.py  test_cli.py  test_compiler.py  test_config.py  test_cost_tracker.py  test_detector.py  test_differ.py  test_errors.py  test_eval.py  test_executor.py  test_hook.py  test_matrix.py  test_mcp.py  test_migrator.py  test_phase4_cli.py  test_plugin_integration.py  test_process_registry.py  test_prompt.py  test_router.py  test_run_cmd.py  test_scaffold.py  test_scaffold_ts.py  test_snapshot.py  test_tail.py  test_teach.py  test_templates.py  test_v110_contracts.py  test_worktree.py
tests/fixtures/bootstrapped-project/: .env.example  package.json
tests/fixtures/bootstrapped-project/.agent/: ARCHITECTURE.md  PHILOSOPHY.md  STATUS.md  STYLE.md  TESTING.md
tests/fixtures/empty-project/: README.md
tests/fixtures/go-chi/: go.mod
tests/fixtures/nextjs-app/: package.json  tsconfig.json
tests/fixtures/python-fastapi/: .env.example  pyproject.toml
topologies/: backend.md  frontend.md  infrastructure.md  library-sdk.md  llm-failure-modes.md  ml-ai.md
workflows/: audit.md  build.md  implement-backend.md  implement-frontend.md  product-definition.md  release-gatekeeper.md  ship.md  spec.md  step1-spec.md  step2-trap.md  step3-build.md  step4-audit.md  step5-ship.md  tech-blueprint.md  trap.md
(+2 files in other folders)
